<resources>
    <string name="app_name">Notebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_note_title">Новая заметка</string>
    <string name="edit_note_title">Редактировать</string>
    <string name="Heading">Заголовок</string>
    <string name="phone_number">Номер телфона</string>
    <string name="remember">Запомнить</string>
    <string name="preservation">сохранить</string>
    <string name="new_note">Новая заметка</string>
    <string name="setting_menu">настройки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="main">Main</string>
    <string name="fragment_navigation">Заметки Замечены</string>
    <string name="update">редактировать</string>
    <string name="delete">удалить</string>
    <string name="delete_menu">Удалить</string>

</resources>