<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="1"
        android:title="@string/main"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="2"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="3"
        android:title="@string/settings" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting_menu"
        android:orderInCategory="4"
        app:showAsAction="always" />

</menu>